// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Does not transform when no extensions are registered 1`] = `"<Abc />;"`;

exports[`Removes targetProp prop even if that element was not targeted 1`] = `"<Abc />;"`;

exports[`replace copies over props by default 1`] = `
"import _Extension from \\"/My/extensions/path.js\\";
<_Extension customPropShouldStay=\\"test\\"></_Extension>;"
`;

exports[`replace does not copy over props when "withoutProps" is true 1`] = `
"import _Extension from \\"/My/extensions/path.js\\";
<_Extension></_Extension>;"
`;

exports[`replace transfers children when "withoutChildren" not specified 1`] = `
"import _Extension from '/My/extension/path.js';
<_Extension>
    <div>I should be transferred</div>
</_Extension>;"
`;

exports[`replace using "withoutChildren" does not copy children 1`] = `
"import _Extension from '/My/extensions/path.js';
<_Extension></_Extension>;"
`;

exports[`replacement injects new import declaration, and replaces target 1`] = `
"import _Extension from '/My/extension/path.js';
<_Extension></_Extension>;"
`;
